Update on Overleaf.

--- a/resume.tex
+++ b/resume.tex
@@ -120,14 +120,11 @@
 %-------------------------------------------------------------------------------
 \vspace{-1ex}
 \section{Education}
-\cusemph{Auburn University}, Alabama, USA\\
-{\sl M.S. \& Ph.D.}, Computer Science and Software Engineering \timeline{Aug' 18 - Present}\\
-{\cusemph{GPA: 4/4}}
+\cusemph{Auburn University}, Alabama, USA \timeline{Aug' 18 - Present}\\
+{\sl M.S. \& Ph.D.}, Computer Science and Software Engineering, {\cusemph{GPA: 4/4}} 
 \\[2ex] 
-\cusemph{Indian Institute of Technology Gandhinagar}, Gujarat, India\\
-{\sl B.Tech.}, Electrical Engineering, \timeline{Jul' 12 - May' 16}
-\\
-\cusemph{GPA: 8.55/10}
+\cusemph{Indian Institute of Technology Gandhinagar}, Gujarat, India \timeline{July 12 - May 16}\\
+{\sl B.Tech.}, Electrical Engineering, \cusemph{GPA: 8.55/10}
 \\[1ex]
 %\vspace{-2ex}
 \sectionline
@@ -147,35 +144,13 @@ Computer Vision, Deep Learning, Explainable Artificial Intelligence
 \vspace{1ex}
 \section{Publications}
 
-\cusemph{Bansal, Naman}*, Aggarwal, Chirag* and Nguyen, Anh*, \cusemph{The Sensitivity Of Attribution Methods To Hyperparameters} (Under review)
+\cusemph{Bansal, Naman}*, Aggarwal, Chirag* and Nguyen, Anh*, \cusemph{The Sensitivity Of Attribution Methods To Hyperparameters} (CVPR 2020) (\textit{22\% acceptance rate})
 
-\cusemph{Bansal, Naman} and Raman, Shanmuganathan, \cusemph{Regularized Tone Mapping Using Edge Preserving Filters}, in the \textit{21st National Conference on Communication}, IIT Bombay, IN, Feb. 27- Mar. 1, 2015. \{\textit{30\% acceptance rate}\}
+\cusemph{Bansal, Naman} and Raman, Shanmuganathan, \cusemph{Regularized Tone Mapping Using Edge Preserving Filters}, in the \textit{21st National Conference on Communication}, IIT Bombay, IN, Feb. 27- Mar. 1, 2015. (\textit{30\% acceptance rate})
 \\[1ex]
 %\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
-
-\iffalse
-%-------------------------------------------------------------------------------
-%       AWARDS & ACHIEVEMENTS	
-%-------------------------------------------------------------------------------
-\section{Awards \& Achievements}
-% Awarded the \cusemph{SIGPLAN PAC Scholarship} for paper presentation at \cusemph{OOPSLA '16}\\
-% \cusemph{Academic Excellence Award 2013-14}, IIT Kanpur\\
-% Secured an \cusemph{All-India-Rank of 202} in JEE Advanced 2013 amongst 150,000 candidates\\
-% Secured an \cusemph{All-India-Rank of 175} in JEE Mains 2013 amongst 20,00,000 candidates\\
-% Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
-
-
-- Awarded Teaching Assistantship by Auburn University (Aug 18 - Present)\\
-- Recipient of Merit-cum-Means scholarship award for meritorious performance throughout the undergraduate program\\  
-- Featured thrice in Dean's List Award for Academic Excellence (IITGN)\\
-- Recipient of the National Instruments Student Travel Fellowship for NCC 2015 conference\\  
-- Recipient of scholarship under Central Sector Scholarship Scheme (CSSS) for outstanding\\ performance in XII Exams
-\\[1ex]% \vspace{-2ex}
-\sectionline
-%-------------------------------------------------------------------------------
-\fi
 
 %-------------------------------------------------------------------------------
 %       RESEARCH PROJECTS	
@@ -186,46 +161,61 @@ Computer Vision, Deep Learning, Explainable Artificial Intelligence
 \begin{project}
   \title{Explainable AI, Auburn University}
   \supervisor{Supervisor : Prof. Anh Nguyen, Artificial Intelligence Lab}
-  \duration{Feb - Nov'19}
+  \duration{Feb' - Nov' 19}
   \description{
-	- Studied and implemented \textasciitilde 15 famous XAI papers\\
-	- Our work culminated in an important finding - 'A key desidratum of an explanation method is its robustness to input hyperparameters' and is under review in a major CV conference
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Identified and addressed several issues with \textasciitilde 15 famous XAI papers
+        \item Published an important criterion - \textit{A key desidratum of an explanation method is its robustness to input hyperparameters}
+    \end{itemize}
+	\iffalse
+	- Our work contributed a key criterion - 'A key desidratum of an explanation method is its robustness to input hyperparameters' and has been accepted for CVPR 2020
+	\fi
   } 
 \end{project}
-\vspace{-2ex}
+\vspace{-1.5ex}
 
 \begin{project}
   \title{Classification of Imbalanced data using Deep Learning, University of Notre Dame}
   \supervisor{Supervisor : Prof. Nitesh Chawla, Director iCeNSA}
-  \duration{May - July '15}
+  \duration{May - July 15}
   \description{
- % - Developed a thorough understanding of the machine learning algorithms such as Linear Regression, Random Forests, SVM and neural networks\\
-	- Designed and implemented a solution to the class imbalance problem using stacked de-noising auto-encoders and pre-processing techniques such as SMOTE and Tomek links\\
-	- Obtained F-scores comparable to existing techniques such as CART and Random Forest 
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Devised and programmed a solution to the class imbalance problem using stacked de-noising auto-encoders and pre-processing techniques such as SMOTE and Tomek links
+        \item Achieved comparable F-scores to classical techniques such as CART and Random Forest 
+    \end{itemize}
+ % - 
+ % Developed a thorough understanding of the machine learning algorithms such as % Linear Regression, Random Forests, SVM and neural networks\\
   } 
 \end{project}
-\vspace{-2ex}
+\vspace{-1.5ex}
 
 \begin{project}
 \title{TMO for HDR Imaging, IIT Gandhinagar}
 \supervisor{Supervisor : Prof. Shanmuganathan Raman, Computer Vision Lab}
-\duration{Aug - Nov '14}
+\duration{Aug' - Nov' 14}
 \description{
-	- Implemented a new \href{https://github.com/champnaman/ToneMapping}{Tone Mapping Operator} (TMO) for High Dynamic Range (HDR) Images\\
-	- Used an edge-preserving filter (bilateral filter or
-WLS filter) and proposed an iterative solution to preserve the contrast and other minute details present in input HDR image
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Proposed a novel \href{https://github.com/champnaman/ToneMapping}{Tone Mapping Operator} (TMO) for High Dynamic Range (HDR) Images % Imaging problem
+        \item Implemented an iterative solution to preserve the contrast and minute details present in input HDR image using an edge-preserving filter %(bilateral filter or WLS filter) 
+    \end{itemize}
 }
 \end{project}
-\vspace{-2ex}
+\vspace{-1.5ex}
 
 \begin{project}
   \title{Time Delay Integration (TDI) Imaging, Space Application Centre, ISRO }
   \supervisor{Supervisor : Mr. Ashish Mishra, Head PCSVD}
-  \duration{May - July '14}
+  \duration{May - July 14}
   \description{
-	- Simulated and analyzed the effects of non-linear platform characteristics and optical butting in TDI Imaging\\
-	- Quantified the distortions based on signal to noise ratio and modular transfer function\\
-	- Integrated the entire work in a simple GUI using Matlab GUIDE
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Simulated and analyzed the effects of non-linear platform characteristics  in TDI Imaging %and optical butting in TDI Imaging
+        \item Quantified the distortions based on signal to noise ratio and modular transfer function
+        \item Integrated the entire work in a simple GUI using Matlab GUIDE
+    \end{itemize}
 }
 \end{project} 
 \\[0ex]
@@ -238,27 +228,34 @@ WLS filter) and proposed an iterative solution to preserve the contrast and othe
 \vspace{-1ex}
 \section{Academic\\Projects}
 \begin{project}
-\title{Copy-Move Forgery Detection}
+\title{Copy-Move Forgery Detection, IIT Gandhinagar}
 \supervisor{Supervisor : Prof. Nitin Khanna}
-\duration{Aug - Nov '15}
+\duration{Aug' - Nov' 15}
 \description{
-- Studied \href{https://www.dropbox.com/s/99aktrn93bf7zkj/study-copy-move.pdf?dl=0}{block-based methods} for copy-move forgery detection such as Zernike Moments, SVD, PCA, and KPCA
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Investigated \href{https://www.dropbox.com/s/99aktrn93bf7zkj/study-copy-move.pdf?dl=0}{block-based methods} for copy-move forgery detection such as Zernike Moments, SVD, PCA, and KPCA
+    \end{itemize}
 }
 \end{project}
-\vspace{-2ex}
+\vspace{-1.5ex}
 
 \begin{project}
-\title{Non-Intrusive Load Modelling}
+\title{Non-Intrusive Load Modelling, IIT Gandhinagar}
 \supervisor{Supervisor : Prof. Babji Srinivasan and Prof. Rajagopalan Srinivasan}
-\duration{Jan - March '15}
+\duration{Jan' - Mar' 15}
 \description{
-	- Worked on non-intrusive load monitoring models for electricity consumption in buildings\\
-	- Wrote a \href{https://github.com/champnaman/EniMeter_Data_Read}{Python script} to collect electricity consumption data using EniMeter SCPM - T12 
+    \vspace{-1.5ex}
+    \begin{itemize}[label={\textbf{\textendash}}, leftmargin=2ex, topsep=0pt]
+        \item Studied non-intrusive load monitoring models for electricity consumption in buildings
+        \item Programmed a \href{https://github.com/champnaman/EniMeter_Data_Read}{script} to collect electricity consumption data using EniMeter SCPM - T12 
+    \end{itemize}
 }
 \end{project}
-\vspace{-2ex}
+\vspace{-1.5ex}
 %\newpage
 
+%% Comments
 \iffalse
 \begin{project}
 \title{Low Cost X-Ray Detector, IIT Bombay}
@@ -274,7 +271,7 @@ X-ray detector
 
 \iffalse
 \begin{project}
-\title{Hand-Written Digit Recognition using PCA}
+\title{Hand-Written Digit Recognition using PCA, IIT Gandhinagar}
 \supervisor{Supervisor : Babji Srinivasan}
 \duration{Nov '16}
 \description{
@@ -285,11 +282,11 @@ X-ray detector
 \fi
 
 \begin{project}
-\title{Database Management System}
+\title{Database Management System, IIT Gandhinagar}
 \supervisor{Supervisor : Prof. Gaurav Srivastava}
-\duration{Nov - Dec '13}
+\duration{Nov' - Dec '13}
 \description{
-- Programmed a \href{https://github.com/champnaman/BasicDB_Sys}{Python script} for maintenance of IITGN student database using SQLite
+- Programmed a \href{https://github.com/champnaman/BasicDB_Sys}{system} for maintenance of IITGN student database using SQLite
 }
 \end{project}
 \\[-1.6ex]
@@ -301,14 +298,17 @@ X-ray detector
 %-------------------------------------------------------------------------------
 \vspace{-1ex}
 \section{Academic Highlights}
+\vspace{9pt}
 \begin{itemize}[label={}, leftmargin=0pt, topsep=0pt]
-\item Awarded \cusemph{Teaching Assistantship} by Auburn University (Aug 18 - Present)
+\item Awarded \cusemph{Graduate Teaching Assistantship} by Auburn University (Aug' 18 - Present)
+%comments
 \iffalse
 \item Recipient of Merit-cum-Means scholarship award for meritorious performance throughout the undergraduate program
+\item Featured thrice in \cusemph{Dean's List} Award for Academic Excellence (IITGN) ()
 \fi
-\item Featured thrice in \cusemph{Dean's List} Award for Academic Excellence (IITGN)
-\item Recipient of the \cusemph{National Instruments Student Travel Fellowship} for NCC 2015 conference
-\item Secured an \cusemph{All-India-Rank} of 4224 in Joint Entrance Examination 2012 amongst approx. half a million candidates
+\item Three time awardee of \cusemph{\href{https://www.iitgn.ac.in/students/deanslist}{Dean's List}} Award for Academic Excellence (IITGN) (July 12 - May 16)
+\item Recipient of the \cusemph{\href{https://www.ee.iitb.ac.in/~ncc2015/travelfellowships.html}{National Instruments Student Travel Fellowship}} for NCC 2015 conference
+\item Secured an \cusemph{All-India-Rank} of 4224 in Joint Entrance Examination 2012 amongst \textasciitilde half a million candidates
 \item Recipient of scholarship under \cusemph{Central Sector Scholarship Scheme} (CSSS) for outstanding performance in XII Exams
 \end{itemize}
 \vspace{-2ex}
@@ -320,9 +320,14 @@ X-ray detector
 %-------------------------------------------------------------------------------
 \vspace{-1ex}
 \section{Technical\\Skills}
+% \vspace{9pt}
 \begin{itemize}[label={}, leftmargin=0pt, topsep=0pt]
-\item \cusemph{Scripts}: Python, MATLAB, \LaTeX 
-\item \cusemph{Libraries}: TensorFlow, OpenCV, scikit, Keras, PyTorch 
+    \item \begin{tabular}{@{\hskip -0.2pt}l @{\hskip 1ex}l }
+    \cusemph{Languages:} & Python, MATLAB (\textit{Most Experienced}) \\
+                         & C, C++, HTML5, CSS3, JavaScript, PHP, \LaTeX (\textit{Basic})\\
+    \end{tabular}
+    \item \cusemph{Libraries}: TensorFlow, OpenCV, scikit, Keras, PyTorch 
+    \item \cusemph{Operating Systems}: Windows, MacOS, Linux
 \end{itemize}
 \vspace{-2ex}
 \sectionline
@@ -333,18 +338,14 @@ X-ray detector
 %-------------------------------------------------------------------------------
 \vspace{-1ex}
 \section{Relevant Courses}
-%\begin{tabular}{@{\hskip -0.2pt}l @{\hskip 4ex}l @{\hskip 4ex}l }
-%Linear Algebra (MITOCW) & Signals and Systems & Probability and Random Processes\\
-%Digital Image Processing & 3D Computer Vision & Algorithms I (Coursera)\\
-%Machine Learning (Coursera) & CS231n (Stanford) & Applied Multivariate Data Analysis
-\begingroup
-\renewcommand{\arraystretch}{1.3} % Default value: 1
-\begin{tabular}{@{\hskip -0.2pt}l @{\hskip 15ex}l }
-Deep Learning (Auburn University) & Machine Learning - Stanford (Coursera) \\
-Linear Algebra (MIT OCW) & Algorithms, Part I - Stanford (Coursera)\\
-Probability and Random Processes & Signals and Systems\\
-Applied Multivariate Data Analysis & 3D Computer Vision\\
-\end{tabular}
+\begingroup % to strectch the space among the cols
+    \renewcommand{\arraystretch}{1.1} % Default value: 1
+    \begin{tabular}{@{\hskip -0.2pt}l @{\hskip 15ex}l }
+        Deep Learning (Auburn University) & Machine Learning (Auburn University) \\
+        Signals and Systems (IITGN) & Probability and Random Processes (IITGN) \\
+        3D Computer Vision (IITGN) & Applied Multivariate Data Analysis (IITGN)\\
+        Linear Algebra (MIT OCW) & Algorithms, Part I - Stanford (Coursera)\\
+    \end{tabular}
 \endgroup
 \\[2.5ex]
 \sectionline
@@ -354,11 +355,56 @@ Applied Multivariate Data Analysis & 3D Computer Vision\\
 %	TEACHING/MENTORING
 %-------------------------------------------------------------------------------
 \vspace{-1ex}
-\section{Teaching Experience}
+\section{Co-Curri-cular Activities}
+\vspace{9pt}
+\begin{itemize}[label={}, leftmargin=0pt, topsep=0pt]
+    \item \cusemph{Graduate Teaching Assistant} \timeline{Aug' 18 - Present}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Leads a lab of \textasciitilde 15 students as a part of \cusemph{Intro to MATLAB Programming} course
+        \iffalse
+            \item Currently a GTA for \cusemph{Intro to MATLAB Programming} course conducted by Prof. Jacqueline Hundley
+            \item Also lead a lab of \textasciitilde 15 students helping them understand the concepts of MATLAB programming
+        \fi
+        \end{itemize}
+        
+    \item \cusemph{Student Run Course} \timeline{Aug' - Nov' 15}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Instructed \iffalse Developed and instructed \fi a course on \cusemph{Applied Computer Programming} to a class of \textasciitilde 30 students
+            \item Explained the concepts of \cusemph{curve fitting, interpolation, solution of linear systems of equations} using MATLAB and Python
+        \end{itemize}
+        
+    \item \cusemph{Course Assistant under EWYL} \timeline{Aug' 14 - May 15}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Selected for \cusemph{Earn While You Learn (EWYL)} program by IITGN aimed at helping students get first-hand professional work experience with accountability 
+            \iffalse
+            \item Assisted Prof. Mohan Joshi for his course on \cusemph{Mathematical Methods in Engineering} 
+            \fi
+            \item Developed modules for redundancy elimination in price indices of various commodities and a Progressive and Iterative approximation (PIA) approach for curve fitting  
+        \end{itemize}
+        
+    \item \cusemph{\href{https://legacy.iitgn.ac.in/counseling.htm}{Student Guide} for Freshmen Students} \timeline{Aug' 14 - Aug' 15}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Served as the first point of contact for freshmen in helping them settle in new environment
+        \end{itemize}
+        
+    \item \cusemph{\href{http://sites.iitgn.ac.in/explorer/}{IIT Gandhinagar Explorer's Fellow}} \timeline{May - July 16}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Spent \cusemph{\href{http://sites.iitgn.ac.in/explorer/2016-explorer/teamnavigatio/}{seven weeks backpacking}} across India at a meager budget of INR $800$ per day 
+        \end{itemize}
+        
+    \item \cusemph{Badminton}
+        \begin{itemize}[label={}, topsep=3pt]
+            \item Represented the institute in \cusemph{\href{http://iitb.ac.in/en/event/50th-inter-iit-sports-meet-2014}{50th Inter IIT Sports Meet}}, IIT Bombay (Dec 2014)
+        \end{itemize}
+        
+\end{itemize}
+
+%% comments
+\iffalse
 \begin{description}
-\item[Teaching Assistant]\ \\
+\item[Teaching Assistant]\ \\ 
 - TA for \cusemph{Intro to MATLAB Programming} course conducted by Prof. Jacqueline Hundley\\
-- Leads a lab for a class of approx. 20 students
+- Leads a lab for a class of approx. 15 students
 \item[Student Run Course]\ \\
 - Instructor of a \cusemph{student-run course titled Applied Computer Programming}\\ %during senior year\\
 - Covered the concepts of \cusemph{curve fitting, interpolation, solution of linear systems of equations} using MATLAB and Python
@@ -369,17 +415,18 @@ Applied Multivariate Data Analysis & 3D Computer Vision\\
 - Served as the first point of contact for freshmen in helping them settle in new environment\\
 - Selection process involved evaluation of ethics and emotional stability of the applicant 
 \end{description}
+\fi
+%% till here
 
-%%%Comment starts here
-\iffalse
-\vspace{-2ex}
-\sectionline
+
+
+
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 %	Extra-Curricular Actives
 %-------------------------------------------------------------------------------
-\vspace{-1ex}
+\iffalse
 \section{Extra-Curricular Activities}
 \begin{description}
 \item[IIT Gandhinagar Explorer's Fellow]\ \\
@@ -397,11 +444,8 @@ India at a meager budget of INR $800$ per day
 - An active member of institute's drama club \cusemph{Abhinaya} in Freshmen and Sophomore year   
 \fi
 \end{description}
-\iffalse
-\vspace{-2ex}
-\sectionline
 \fi
-\fi
+
 %-------------------------------------------------------------------------------
 \end{resume}
 \end{document}
